--- a/sign-up.html
+++ b/sign-up.html
@@ -5,6 +5,46 @@
         <title>Dining when Coding</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
+    <header>
+      <div class="container">   
+          <label>Username : </label>   
+          <input type="text" placeholder="Enter Username" name="username" required>  
+          <label>Password : </label>   
+          <input type="password" placeholder="Enter Password" name="password" required>  
+          <button type="submit">Login</button>   
+          <input type="checkbox" checked="checked"> Remember me   
+          <button type="button" class="cancelbtn"> Cancel</button>   
+          Forgot <a href="#"> password? </a>  
+          <p1>
+              Don't have an account, sign up <button type="button" class="signup"> <a href="./sign-up.html">Here</a> </button> 
+          </p1> 
+      </div>   
+      <nav>
+        <ul>
+          <li>
+            <a href="./index.html">Front Page</a>
+          </li>
+          <li>
+            <a href="./north-east.html">North East</a>
+          </li>
+          <li>
+            <a href="./north-west.html">North West</a>
+          </li>
+          <li>
+            <a href="./south-east.html">South East</a>
+          </li>
+          <li>
+            <a href="./south-west.html">South West</a>
+          </li>
+          <li>
+            <a href="./everything-new.html">See the Newest Posts</a>
+          </li>
+        </ul>
+      </nav>
+        <h1>
+          <a>Dining When Coding</a>
+        </h1>
+      </header>
 <body>
 
 <h2>Signup Form</h2>
