--- a/Project2.1/index.html
+++ b/Project2.1/index.html
@@ -19,7 +19,7 @@
         <!--Showcase section-->
         <section class="showcase">
             <div class="video-container">
-                <video src="assets/images/dcnightshort.mp4" autoplay muted loop></video>
+                <video src="../Project2.1/assets/images/dcnightshort.mov" autoplay muted loop></video>
             </div>
             <div class="header">
                 <img src="../Project2.1/assets/images/DCDines-removebg.png" alt="logo"/>
