--- a/Project2.1/index.html
+++ b/Project2.1/index.html
@@ -70,8 +70,9 @@
         </section>
         
         <!--Contact us form used from project1-->
-        <section>
+        <section class="contact-us">
             <div class="container py-5 my-5">
+              <h2 class="title is-2 is-capitalized">Contact DC Dines Underground</h2>
                 <div class="columns is-justify-content-center">
                   <div class="column is-5-tablet is-5-desktop is-5-widescreen is-5-fullh">
                     <form method="post"
@@ -119,18 +120,18 @@
 
         <!--Project Team Bio-->
         <section>
-          <div class="columns is-multiline">
+          <div class="columns is-multiline is-justify-content-center">
 
            <!--Person1-->
             <div class="column is-5">
               <div class="box p-5">
                 <div class="columns">
                   <div class="column is-4 mb-4 mb-0-desktop">
-                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="../" alt="">
+                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="../Project2.1/assets/images/tjp4ca.png" alt="">
                   </div>
                   <div class="column is-8">
-                    <h3 class="is-size-4 has-text-weight-semibold">Person1</h3>
-                    <p class="mb-6 has-text-grey-dark">Title</p>
+                    <h3 class="is-size-4 has-text-weight-semibold">Michael Park</h3>
+                    <p class="mb-6 has-text-grey-dark">Back End Development</p>
                     <p class="has-text-grey-dark">GitHub</p>
                   </div>
                 </div>
@@ -142,11 +143,11 @@
               <div class="box p-5">
                 <div class="columns">
                   <div class="column is-4 mb-4 mb-0-desktop">
-                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="../" alt="">
+                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="../Project2.1/assets/images/nealmm.png" alt="">
                   </div>
                   <div class="column is-8">
-                    <h3 class="is-size-4 has-text-weight-semibold">Person1</h3>
-                    <p class="mb-6 has-text-grey-dark">Title</p>
+                    <h3 class="is-size-4 has-text-weight-semibold">Matt Neal</h3>
+                    <p class="mb-6 has-text-grey-dark">Back End Development</p>
                     <p class="has-text-grey-dark">GitHub</p>
                   </div>
                 </div>
@@ -158,11 +159,11 @@
               <div class="box p-5">
                 <div class="columns">
                   <div class="column is-4 mb-4 mb-0-desktop">
-                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="../" alt="">
+                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="../Project2.1/assets/images/alenco98.png" alt="">
                   </div>
                   <div class="column is-8">
-                    <h3 class="is-size-4 has-text-weight-semibold">Person1</h3>
-                    <p class="mb-6 has-text-grey-dark">Title</p>
+                    <h3 class="is-size-4 has-text-weight-semibold">Franco Melendez</h3>
+                    <p class="mb-6 has-text-grey-dark">Front End Development</p>
                     <p class="has-text-grey-dark">GitHub</p>
                   </div>
                 </div>
@@ -174,11 +175,11 @@
               <div class="box p-5">
                 <div class="columns">
                   <div class="column is-4 mb-4 mb-0-desktop">
-                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="../" alt="">
+                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="../Project2.1/assets/images/gsmith560.png" alt="">
                   </div>
                   <div class="column is-8">
-                    <h3 class="is-size-4 has-text-weight-semibold">Person1</h3>
-                    <p class="mb-6 has-text-grey-dark">Title</p>
+                    <h3 class="is-size-4 has-text-weight-semibold">Grahah Smith</h3>
+                    <p class="mb-6 has-text-grey-dark">Front End Development</p>
                     <p class="has-text-grey-dark">GitHub</p>
                   </div>
                 </div>
